# habitat-web

./: .gitignore  .gitmodules  CMakeLists.txt  HIT_MONITORING.md  README.md  build_and_install_habitat_sim_js.sh  build_js.sh  package.json  requirements.txt  tsconfig.json
task/: .psiturk_history  HIT_APPROVAL.md  README.md  config.txt  custom.py  nginx.conf  requirements.txt  task_data.json
task/habitat_web_app/: CMakeLists.txt  README.md  bindings.css  bindings.html  bindings_js.cpp  index.js  webpack.config.js
task/habitat_web_app/modules/: TaskValidator.js  defaults.js  event_logger.js  inventory.js  navigate.js  object_maps.js  objectnav_task.js  pick_place_task.js  simenv_embind.js  task_validator.js  utils.js  web_demo.js
task/habitat_web_app/tests/: physics.test.js  physics_determinism.json  viewer_demo.visual.test.js
task/orm/: models.py
task/scripts/: create_user.py
task/scripts/data/: download.sh  download_hit_data.py  parse_objectnav_dataset.py  sample_hits.py  upload_hits.py
task/scripts/misc/: get_pending_tasks.py
task/scripts/monitoring/: approve_hits.py  launch_hits.py
task/scripts/mturk/: connection_test.py
task/static/css/: style.css
task/static/habitat-sim/: WebApplication.css  bundle.js  bundle.js.map  hsim_bindings.js  hsim_bindings.wasm
task/static/js/: monitoring.js  pagination.js  task.js  training_results.js
task/templates/: ad.html  allcomplete.html  bindings.html  complete.html  consent.html  default.html  error.html  exp.html  hit-monitoring.html  limitfailure.html  noepisodeavailable.html  postquestionnaire.html  retrytask.html  thanks-mturksubmit.html  thanks.html  training_results.html  viewer.html  visualization.html
task/templates/instructions/: instruct-flythrough.html  instruct-general.html  instruct-task.html  instruct-training.html  replay.html
task/templates/navigation/: end.html  next.html  skip.html  start.html
